# pra6sem_2

./: .gitignore  CMakeLists.txt  const.h  main.cpp  readme.txt  sha512.cpp  sha512.hpp  test1.txt  test2.txt  test3.txt
